--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,16 @@ header a:hover {
   color: #FFA573;
 }
 
+
+input[type='number'] {
+  -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 a:hover {
   text-decoration: underline;
   text-underline-offset: 4px;
