--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --background: #ffffff;
   --foreground: #171717;
 
-  --primary-default: #FF9F5B;
+  --primary-default: #ff9f5b;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,9 +20,8 @@ header a:hover {
   color: var(--primary-default);
 }
 
-
 input[type='number'] {
-  -moz-appearance:textfield;
+  -moz-appearance: textfield;
 }
 
 input::-webkit-outer-spin-button,
@@ -36,7 +35,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.discord *, .gitbook *, .x * {
+.discord *,
+.gitbook *,
+.x * {
   transition: all 0.3s;
 }
 
@@ -57,7 +58,7 @@ body {
 }
 
 .x:hover div:first-child {
-  background-color: #1DA1F2;
+  background-color: #1da1f2;
 }
 
 .x:hover svg path {
@@ -91,7 +92,8 @@ body {
 }
 
 @keyframes float {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0) translateX(0);
   }
   25% {
@@ -161,4 +163,3 @@ body {
 .animate-glow {
   animation: glow 4s infinite ease-in-out;
 }
-
