--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+label[data-selected='true'] > span {
+  background-color: var(--primary-default) !important;
+}
+
 .discord *,
 .gitbook *,
 .x * {
